2008-02-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (gd_strdup) src/set.c (set_decimalsign): Fix segfault due
	to trying to free a string returned by getenv().
	Bugfix.

	* term/svg.trm (SVG_layer): Force each plot to have its own bracketing
	group.
	Bugfix.

2008-02-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (adjust_binary_use_spec):  This whole routine is
	garbage. Patch it lightly so that at least it can handle more than one
	plot per graph.  But really it needs to be re-written from scratch.
	Bugfix.

2008-02-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/hidden3d.c (reset_hidden3doptions):  Change default
	setting of "set hidden3d {front|back}" to "back" so that it matches the
	behavior of earlier versions.

2008-02-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term): Insure that 'set term foo' will always
	succeed if there is a terminal named "foo", even if there are also
	terminals named "foobaz" and "foodstuff".  Bugfix (svg/svga)

2008-02-04  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp:
        * src/wxterminal/wxt_gui.h:
        * src/wxterminal/wxt_term.h:
        * src/wxterminal/gp_cairo.c:
        * src/wxterminal/gp_cairo.h:
        * src/wxterminal/gp_cairo_term.h:
	* term/cairo.trm:
	* term/wxt.trm:
	Rework the cairo code for 'enhanced text' to make it more independant
	from the parsing code. Now the parser loop is directly in the terminals
	code, instead of being in gp_cairo.*. This is a preliminary work for
	wxt-as-a-separate-process. It has the advantage of killing some global
	variables in cairo code, although this particular aspect of the work is
	not complete. gp_cairo_term.h is now useless and removed.

2008-02-03  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.h:
	* src/wxterminal/wxt_gui.cpp (LoadCursor):
	* src/wxterminal/bitmaps/xpm/cross.xpm:
	* src/wxterminal/bitmaps/xpm/icon16x16.xpm: